[package]
name = "ifcfg"
version = "0.1.1"
authors = ["Marirs <marirs@gmail.com>", "Kamran Amini <kam.cpp@gmail.com>"]
description = "Get network interfaces information"
keywords = ["network", "interfaces", "ifconfig", "ifcfg", "iface"]
readme = "README.md"
homepage = "https://github.com/marirs/ifcfg-rs"
repository = "https://github.com/marirs/ifcfg-rs"
license = "MIT/Apache-2.0"
build = "build.rs"
edition = "2018"

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
bitflags = "1"
lazy_static = "1"
nix = "0.20.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [ "minwindef", "winerror", "ws2def", "ws2ipdef", "iptypes" ] }

[target.'cfg(unix)'.build-dependencies]
cc = "1"
handlebars = "0.29"
serde = "1"
serde_derive = "1"

[lib]
name = "ifcfg"
path = "src/lib.rs"

[badges]
travis-ci = { repository = "marirs/ifcfg-rs" }

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true
